2014-09-16  Kostas Nakos  <knakos@gmail.com>
* atari.c: Skip ROM file search as some android builds go in infinite loop
  due to buggy platform implementation.

* configure.ac: Updated to newer android toolchain.

* android/*: Support for built-in Planetary Defense 2012 (courtesy and thanks
  to Tom Hudson, miscellaneous fixes, update to newer android toolchain.


** 3.1.0 released on 2014-04-12

2014-04-12  Petr Stehlik <pstehlik@sophics.cz>
* DOC/ChangeLog, DOC/NEWS: updated for new release

* README.1ST, atari800.spec, DOC/README, atari.h, atari800.man, configure.ac,
  util/export: version++


2014-04-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cfg.c, mxpokeysnd.[ch], pokeysnd.[ch], sound.c, ui.c, configure.ac: Moved the
  SYNCHRONIZED_SOUND code made more generic and moved out of mzpokeysnd.c to
  pokeysnd.c. Now synchronized sound is supported by both pokey sound engines.

* colours_pal.c: Minor formatting & constness fixes.


2014-03-03  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, atari_basic.c, atari_curses.c, atari_falcon.c, atari_ps2.c,
  atari_x11.c, amiga/amiga.c, dos/atari_vga.c, sdl/main.c,
  win32/atari_win32.c, win32/main.cpp, atari_wince.c Ensure that Sound_Exit()
  is called after config file is saved-on-exit, by moving the call to
  Sound_Exit() out of PLATFORM_Exit() and into Atari800_Exit(). Reason: When
  SOUND_THIN_API is enabled, autosaving after Sound_Exit would cause the
  config file's SOUND_ENABLED entry to always be written as 0.


2014-02-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/init.c, sdl/main.c: Avoid "undefined reference to PLATFORM_Time" linker
  error when configured --with-sound=sdl but --with-video != sdl.

* atari.c: Fixed a bug with keyboard input not working on --with-video=ncurses
  --with-audio=oss. On initialisation, Sound_enabled == TRUE but audio output
  is not yet initialised. In such situation calling
  sound_oss.c->PLATFORM_SoundSetup() would close standard input, thus disabling
  keyboard.

